# libakrypt-mini

./: CMakeLists.txt  Doxyfile.in  Makefile  Readme  Readme.md  ak_hash.h  ak_streebog.c  example.sh  libakrypt.h  refman_header.in  test_hash.c
source/: ak_curves.c  ak_hmac.c  ak_kdf.c  ak_kuznechik.c  ak_mpzn.c  ak_sign.c  ak_streebog.c  ak_tools.c  libakrypt-mini.h  libakrypt.h
test/: test_hash.c  test_hspeed.c  test_keys.c  test_pbkdf2.c  test_sign.c
